--- a/cs-drf-customers/requirements.txt
+++ b/cs-drf-customers/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.0.9
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.9
+django-filter==22.1
 djangorestframework==3.12.4
 Faker==0.7.4
 psycopg2==2.9.2
