--- a/cs-drf-api-school/requirements.txt
+++ b/cs-drf-api-school/requirements.txt
@@ -4,11 +4,16 @@ charset-normalizer==2.0.9
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.9
+django-filter==22.1
 djangorestframework==3.12.4
-psycopg2==2.9.2
-psycopg2-binary==2.8.6
+Faker==0.7.4
 ptvsd==4.3.2
+python-dateutil==2.8.1
+pytz==2020.4
 requests==2.26.0
 sqlparse==0.4.2
+text-unidecode==1.3
 uritemplate==4.1.1
 urllib3==1.26.7
+validate-docbr==1.10.0
+six==1.15.0
