--- a/cs-drf-api-school/requirements.txt
+++ b/cs-drf-api-school/requirements.txt
@@ -4,9 +4,12 @@ charset-normalizer==2.0.9
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.9
+django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.12.4
 Faker==0.7.4
+psycopg2==2.9.2
+psycopg2-binary==2.8.6
 ptvsd==4.3.2
 python-dateutil==2.8.1
 pytz==2020.4
