--- a/cs-drf-api-school/requirements.txt
+++ b/cs-drf-api-school/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.9
 django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.12.4
+django-redis==5.2.0
 Faker==0.7.4
 Pillow==9.3.0
 psycopg2==2.9.2
